--- a/net/Kconfig
+++ b/net/Kconfig
@@ -79,6 +79,7 @@ if INET
 source "net/ipv4/Kconfig"
 source "net/ipv6/Kconfig"
 source "net/netlabel/Kconfig"
+source "net/stbm/Kconfig"
 
 endif # if INET
 
