--- a/net/stbm/Makefile
+++ b/net/stbm/Makefile
@@ -2,4 +2,4 @@
 # Makefile for the AUTOSAR STBM (Synchronized Time-Base Manager)
 #
 
-obj-y	:= 	eth.o ethif.o ethtsyn.o stbm.o
+obj-y	:= 	eth.o ethif.o ethtsyn.o stbm.o avtp_dong.o
